Basic functions and Authentication with HttpBasic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.url: jdbc:mysql://localhost:3306/einkaufen
-spring.datasource.username=einkaufen_admin
+spring.datasource.username=einkaufen.admin
 spring.datasource.password=myPassword
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
