--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url: jdbc:mysql://localhost:3306/einkaufen
+spring.datasource.url=jdbc:mysql://localhost:3306/einkaufen
 spring.datasource.username=einkaufen.admin
 spring.datasource.password=myPassword
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
