--- a/src/main/resources/public/manifest.json
+++ b/src/main/resources/public/manifest.json
@@ -1,7 +1,14 @@
 {
-  "lang": "de",
   "name": "Einkaufsliste",
-  "scope": "/",
+  "icons": [
+    {
+      "src": "img/fav.ico",
+      "sizes": "196x196",
+      "type": "image/ico",
+      "density": "1.0"
+    }
+  ],
   "start_url": "index.html",
-  "display": "fullscreen"
+  "display": "standalone",
+  "orientation": "portrait"
 }
