--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+//Connection-String for DB. e.g. jdbc:mysql://localhost:3306/mySchema
 spring.datasource.url=jdbc:mysql://localhost:3306/einkaufen
+//Username for the DB
 spring.datasource.username=einkaufen.admin
+//Password for the given username
 spring.datasource.password=myPassword
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
