use H2 by default

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 //Connection-String for DB. e.g. jdbc:mysql://localhost:3306/mySchema
-spring.datasource.url=jdbc:mysql://localhost:3306/einkaufen
+spring.datasource.url=jdbc:h2:mem:shoppingList
 //Username for the DB
-spring.datasource.username=einkaufen.admin
+spring.datasource.username=sa
 //Password for the given username
-spring.datasource.password=myPassword
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
