--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <version>1.14.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>springloaded</artifactId>
+            <version>1.2.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
