added possibility to set default password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
+security.user.password=password
